syntax ="proto3";


service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
}
message LoginRequest{
    string email = 1;
    string password = 2;
}
message LoginResponse{
    bool success = 0;
    string token = 1;
}

message RegisterRequest{
    string username = 1;
    string password = 2;
    string email = 3;
}
message RegisterResponse{
    bool success = 0;
    string token = 1;
}

message ResetPasswordRequest{
    string email = 1;
}
message ResetPasswordResponse{
    string message =1;
    bool success = 2;
}

message ChangePasswordRequest{
    string email = 1;
    string password = 2;
}
message ChangePasswordResponse{
    string message =1;
    bool success = 2;
}
